k8s/network-policy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordsmith-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - myingress.northeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /wordsmith/(.*)
        #pathType: Prefix
        backend:
          serviceName: web
          servicePort: 8081
